# MapLineDraw

./: .gitignore  Project.json  README.md  article.md  compose.yml  deploy.md  ideas.md  init.sh
.github/workflows/: deploy.yml
api/: Dockerfile  api.py  globe.py  pyproject.toml  spline.py
api/lib/: geo.py  globe.py  spline.py  themes.py  types.py  util.py
nginx/: default.conf  proxy_headers.conf  ssl.conf
scripts/: build.sh  deploy.sh
web/: Dockerfile  app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json
web/assets/: main.scss
web/components/: Alert.vue  Ico.vue  Logo.vue  Map.vue  MapView.vue  Modal.vue  Navbar.vue
web/pages/: about.vue  index.vue
web/pages/projects/: [id].vue
web/pages/public/: [id].vue
web/plugins/: bootstrap.client.ts
web/types/: index.ts
web/utils/: api.ts  geo.js  geo.ts  themes.js  themes.ts
